# zk-app-attest

./: .gitmodules  README.md
app/: pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/kotlin/com/example/app/: MainActivity.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app_device_integrity/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
app_device_integrity/android/: build.gradle  settings.gradle
app_device_integrity/android/src/main/: AndroidManifest.xml
app_device_integrity/android/src/main/kotlin/co/bubotech/app_device_integrity/: AppDeviceIntegrity.kt  AppDeviceIntegrityPlugin.kt
app_device_integrity/android/src/test/kotlin/co/bubotech/app_device_integrity/: AppDeviceIntegrityPluginTest.kt
app_device_integrity/example/: README.md  pubspec.yaml
app_device_integrity/example/android/app/: build.gradle
app_device_integrity/example/android/app/src/main/: AndroidManifest.xml
app_device_integrity/example/android/app/src/main/kotlin/co/bubotech/app_device_integrity_example/: MainActivity.kt
app_device_integrity/example/integration_test/: plugin_integration_test.dart
app_device_integrity/example/ios/Runner/: Info.plist
app_device_integrity/example/ios/Runner.xcodeproj/: project.pbxproj
app_device_integrity/example/ios/RunnerTests/: RunnerTests.swift
app_device_integrity/example/lib/: main.dart
app_device_integrity/example/lib/services/providers/: attest_provider.dart
app_device_integrity/example/test/: widget_test.dart
app_device_integrity/ios/: app_device_integrity.podspec
app_device_integrity/ios/Classes/: AppDeviceIntegrity.swift  AppDeviceIntegrityPlugin.swift
app_device_integrity/lib/: app_device_integrity.dart  app_device_integrity_method_channel.dart  app_device_integrity_platform_interface.dart
app_device_integrity/macos/: app_device_integrity.podspec
app_device_integrity/macos/Classes/: AppDeviceIntegrity.swift  AppDeviceIntegrityPlugin.swift
app_device_integrity/test/: app_device_integrity_method_channel_test.dart  app_device_integrity_test.dart
data_collection_and_processing/: breathalyzer.py
on-device/: .gitignore  README.md  breathalyzer_util.py  connection_test.py  hardcoded_adjustment.py  main.py  math_util.py  pico_client_tasks.py  pymakr.conf  raspberry_client.py  raspberry_server.py  run_breathalyzer.py  utilities.py
zk_attest/: Cargo.toml  risc_zero_zk_attest.proof  risc_zero_zk_attest.pub
zk_attest/aligned_verification_data/: 644f6ebe_26.json
zk_attest/app_attest/: Cargo.toml
zk_attest/app_attest/src/: assertion.rs  attestation.rs  lib.rs  root.rs  types.rs
zk_attest/core/: Cargo.toml
zk_attest/core/src/: attestation.rs  lib.rs  types.rs  utils.rs
zk_attest/host/: Cargo.toml
zk_attest/host/src/: main.rs
zk_attest/methods/: Cargo.toml  build.rs
zk_attest/methods/guest/: Cargo.toml
zk_attest/methods/guest/src/: main.rs
zk_attest/publisher/: Cargo.toml
zk_attest/publisher/src/: main.rs
zk_attest/rust_api_server/: Cargo.toml
zk_attest/rust_api_server/src/: main.rs  simple_math.rs
zk_attest/src/: attestation.rs  certificate.rs  lib.rs  utils.rs
