[workspace]
resolver = "2"
members = ["host", "methods", "core", "rust_api_server", "methods/guest"]

[workspace.dependencies]
risc0-build = "1.0.5"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true