[package]
name = "src"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_cbor = "0.10"
serde = { version = "1.0.200", features = ["derive"] }
serde_derive = "1.0.200"
serde_json = "1.0.116"
sha2 = { version = "0.10", default-features = false }
p256 = "0.13.2"
hex = "0.4.3"
bcder = "0.7.4"
bytes = "1.5.0"
der-parser = "9.0.0"
x509-verify = { version = "0.4.5", features = ["p256", "p384", "x509", "pem"] }
x509-cert = "0.2.5"
base64ct = "1.6.0"
