[package]
name = "rust_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.5" }
actix-web = "4.0"
awc = "3.0"  # Actix Web Client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
app_attest_core = { path = "../core/" }
methods = { path = "../methods" }