[package]
name = "zk_attest_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
app_attest_core = { path = "../../core" }
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }


[build-dependencies]
risc0-build = "1.0.5"